--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                        <a class="navbar-brand" href="#">CSS Grid</a>
+                        <a class="navbar-brand" href="#">Apple</a>
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
